ok .gitignore now works

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-resources/google-token.txt
-resources/token.txt
+enchanted-swiftie/resources/google-token.txt
+enchanted-swiftie/resources/token.txt
 *.pyc
 
 # PyCharm
